# tax-calculator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.env  docker-compose.yml  pyproject.toml  wsgi.py
app/: __init__.py
app/api/: cache_routes.py  calculate_tax_routes.py
app/configurations/: __init__.py
app/constants/: __init__.py
app/core/: cache.py  tax_calculator.py  worker.py
app/decorators/: auth.py  rate_limit.py  retry_on_failure.py  timing.py
app/exceptions/: api_errors.py  config_errors.py
app/utils/: validators.py
tests/integrations/: test_batch_calculate_tax_api.py  test_cache_api.py  test_calculate_tax_api.py  test_errors.py
tests/unit/: test_auth.py  test_cache.py  test_rate_limit.py  test_retry_on_failure.py  test_tax_calculator.py  test_timing.py  test_validators.py  test_worker.py
